fixed spacing on product display when there are less items in category

--- a/react-vite/src/components/LandingPage/LandingPage.css
+++ b/react-vite/src/components/LandingPage/LandingPage.css
@@ -12,8 +12,10 @@ h3 {
 .products-container {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: center;
+  gap: 20px;
 }
+
 
 .product-container {
   flex: 0 0 calc(20% - 20px);
